Update SHEET_NAME to 'teamwallet'
Changed the sheet name from 'Sheet1' to 'teamwallet'.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 // 스프레드시트 > 확장 프로그램 > Apps Script에 붙여넣기
 // ========================================
 
-const SHEET_NAME = 'Sheet1'; // 시트 이름 (필요시 수정)
+const SHEET_NAME = 'teamwallet'; // 시트 이름 (필요시 수정)
 const BUDGET_PER_PERSON = 50000;
 
 function doGet(e) {
